# Solaris-Propulsion

./: .gitattributes  .gitignore  2dCooling.py  ANUS.m  Cooling.py  Doublet  Doublet.py  Doublet_Functions.py  Drill.py  InjectorCad.py  Nozzle.SLDPRT  README.md  SOLARIS SHEET FORMATE SIZE B.slddrt  cont.txt  contour.txt  coolmesh.msh.z  edgeData.xlsx  fluid.py  howto.md  injector_plate.scad  makeenv.py  pyproject.toml  requirements.txt  saveprev.msh.z  setup.py  test.py
CAD/: ERAU B1.slddrt  ERAU B2+.slddrt  ME-429-SP-000-00 - Copy.SLDASM  SOLARIS EXAMPLE DRAWING.SLDDRW  SOLARIS SHEET FORMATE SIZE D.slddrt  Solaris BOM.sldbomtbt  Solaris Propulsion Template Size B.DRWDOT  main_design _table.xlsx
CAD/-000 Assembly/: ME-429-SP-000-00.SLDASM
CAD/-002 Igniter/: 7561K64_Steel Indoor Enclosure.SLDPRT  7641K35_End Stop for One Circuit Modular DIN-Rail Mount Terminal Block.SLDPRT  7641K929_Modular DIN-Rail Mount Terminal Block.SLDPRT  8961K87_Steel DIN 3 Rail.SLDPRT  Curent Sensing PCB.SLDPRT  Igniter.SLDPRT  Test Cell Panel moungint plate.SLDPRT  Wire connector.SLDPRT  (+3 more)
Email/: auto_mail.py
Injector/: Doublet.py  fluid.py
Nozzle/: rao.py  test.py  testfield.py
Nozzle Analysis/: ANUS.py  analysis.py  angelino.py  gas.py  nozzle.py  post.py  rao.py  test.py  testfield.py
resources/: Companies to contact.xlsx  Test Companies.xlsx  auto_mail.py  signature.html
scripts/: areas1d.py  cooldomain.py  coolingplot.py  coolingtest.py  doublet_test.py  field.py  film.py  in_ex_noz.py  isp.py  loadmesh.py  mini.py  multicore.py  pluggen.py  pressure.py  units.py
(+279 files in other folders)
