[project]
name = "SolarisCode"
dependencies = ["numpy",
"matplotlib",
"scipy",
"CoolProp",
"pint",
"icecream",
"logging",
"matrix_viewer",
"pyromat",
"rocketcea",
"texttable",
"rocketprops",
"pyyaml",
"ambiance",
"PyQt6"
]
version = "0.1.0"
description = "A package for aerospike engine calculations"
